fix: overflows in Transfer

--- a/src/components/Wallet/Transfer/Addresses/Addresses.module.scss
+++ b/src/components/Wallet/Transfer/Addresses/Addresses.module.scss
@@ -11,9 +11,6 @@
     padding: 40px;
     padding-top: 15px;
     flex: 0 1 50%;
-    min-height: 670px;
-    max-height: 900px;
-    overflow-y: hidden;
 
     .addressList {
         overflow-y: auto;
