--- a/src/components/Wallet/Transfer/Transfer.module.scss
+++ b/src/components/Wallet/Transfer/Transfer.module.scss
@@ -3,15 +3,13 @@
 .panel {
     padding: 0;
     flex: 0 1 50%;
-    min-height: 670px;
-    max-height: 900px;
-    overflow-y: auto;
 }
 
 .wrapper {
     display: flex;
     gap: 30px;
-    overflow-y: auto;
+    overflow-y: hidden;
+    height: 100%;
 }
 
 @media screen and (max-width: 1400px) {
@@ -24,6 +22,7 @@
 @media screen and (max-width: $mobile-breakpoint-max-width) {
     .wrapper {
         gap: 15px;
+        overflow-y: auto;
     }
     .panel {
         padding: 0;
